--- a/index.html
+++ b/index.html
@@ -1,46 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pacific Trials Resort</title></titl></title>
-  </head>
-  <body>
-    <header>
-     <h1>Pacific Trails Resort</h1>
-    </header> 
+    <title>Path of Light Yoga</title>
+</head>
+<body>
+ 
+<header><h1>Path of Light Yoga</h1></header>   
 
-     <nav>
-     </ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="yurts.html">Yurts</a></li>
-    <li><a href="Activities.html">Activities</a></li>
-    <li><a href="reservations.html">reservations</a></li></li>
-    </ul>
-   </nav> 
-   <main>
-    <h2>Enjoy Nature in Luxury</h2>
-    <p>Pacific Trails Resort offers a special lodging experience on the California North Coast with panoramic views of the Pacific Ocean. Your stay at Pacific Trails Resort includes a sumptuously appointed private yurt and a cooked-to-order breakfast each morning.</p>
+<nav><ul><li><a href="index.html">Home</a></li>
+<li><a href="classes.html">Classes</a></li>
+<li><a href="schedule.html">Schedule</a></li>
+<li><a href="contact.html">Contact</a></li>
+</ul>
+</nav>
+<main>
+    <!-- <h2>Find Your Inner Light</h2> -->
+    <h2>Find Your Inner Light</h2>
+    <p>Path of Light Yoga Studio provides all levels of yoga practice in a tranquil, peaceful environment. Whether you are new to yoga or an experienced practitioner, our dedicated instructors can develop a practice to meet your needs. Let your inner light shine at the Path of Light Yoga Studio.</p>   
+    <!-- ul>li*4 -->
 
     <ul>
-        <li>Relax in our lodge while enjoying complimentary appetizers and beverages</li>
-        <li>Savor nightly fine dining with an ocean view</li>
-        <li>Unwind in the heated outdoor pool and whirlpool</li>
-        <li>Explore the coast on your own or join our guided tours</li>
+        <li>Hatha, Vinyasa, and Restorative Yoga classes</li>
+        <li>Drop-ins welcome</li>
+        <li>Mats, blocks, and blankets provided</li>
+        <li>Relax before or after your class in our Serenity Lounge</li>
     </ul>
     <div>
-        <p>Pacific Trails Resorts <br>
-        12010 Pacific Trails Road
-        Zephyr, CA 95555 <br>
-        888-555-5555
-        </p>
+        <p>612 Serenity Way <br>
+        El Dorado, AZ 86336 <br>
+    888-555-5555
+     </p>
     </div>
-   </main>
+</main>
 
-   <footer>
-    <p><small><i>Copyright &copy; 2024 Pacific Trails Resort</i></small>
-        Alex Gehrdau
-   </p>
+<footer>
+    <p><small><i>Copyright&copy; 2024 Path of Light Yoga</i></small><br>Alex Gehrdau</p>
 </footer>
-  </body>
+</body>
 </html>
