--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <li><a href="chapter2/pacific/index.html">Chapter 2</a></li>
         <li><a href="chapter3/yoga/">Chapter 3</a></li>
         <li><a href="chapter4/pacific/">Chapter 4</a></li>
+        <li><a href="chapter4/pacific/">Chapter 4</a></li>
+                <li><a href="chapter5/pacific/">Chapter 5</a></li>
+
     </ul>
   </nav>  
 </body>
