--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <li><a href="chapter11/ch11pacific/">Chapter 11</a></li>
         <li><a href="flexbox/flexbox/">Flexbox</a></li>
         <li><a href="chapter12/ch12pacific/">Chapter 12</a></li>
+        <li><a href="chapter13/ch13pacific/">Chapter 13</a></li>
+
     </ul>
   </nav>  
 </body>
